updates to database variables to publish to heroku

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ NODE_ENV=development
 PORT=3001
 
 # DB VARIABLES #
-DB_NAME=coachme
+DB_NAME=coachmeresume
 DB_USER=postgres
-DB_PASSWORD=mydbpassword
+DB_PASSWORD=
 DB_SERVER=localhost
 DB_PORT=5432
 
